Macro-economic assessments of climate impacts