@@ -1,1 +1,3 @@
-Macro-economic assessments of climate impacts
+ # Climate change: Macroeconomic impact and implications for monetary policy
+
+Climate change and policies to mitigate it could affect a central bank’s ability to meet its monetary stability objectives. Climate change can affect the macroeconomyboth through gradual warming and the associated climate changes (e.g. total seasonal rainfall and sea level increased) and through increasedfrequency, severity and correlationof extreme weather events(physical risks).Inflationary pressures might arise from a decline in the national and international supply of commoditiesor from productivity shocks caused by weather-related events such as droughts, floods, storms and sea level rises. These events can potentially resultin large financial losses, lower wealth and lower GDP. An abrupttightening ofcarbon emission policies could also lead to a negative macroeconomic supply shock (transition risks).This chapter reviews the channels through which climate risks can affect central banks’ monetary policy objectives, and possible policy responses. Approaches to incorporate climate change in central bank modelling are also discussed.
